--- a/oracle-ui/index.html
+++ b/oracle-ui/index.html
@@ -2,6 +2,7 @@
     <head>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://github.com/ethereum/web3.js/blob/develop/dist/web3.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
         <script src="node_modules/angular/angular.min.js"></script>
@@ -20,7 +21,7 @@
                 </button>
             </div>
             <div class="toast-body">
-                Contract address:  <span ng-bind="oracleUi.contract"></span>
+                Contract address:  <span ng-bind="oracleUi.address"></span>
             </div>
         </div>
 
@@ -35,7 +36,7 @@
                             </div>
     
                             <div class="form-group">
-                                <input class="form-control" type="text" name="contract" id="contract" ng-bind="oracleUi.contract" placeholder="Contract Address">
+                                <input class="form-control" type="text" name="address" id="address" ng-bind="oracleUi.address" placeholder="Contract Address">
                             </div>
     
                             <div class="form-group">
