last thing: add display price

--- a/ui/game.html
+++ b/ui/game.html
@@ -87,34 +87,18 @@
                         <img src="./img/player.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <fieldset ng-disabled="true">
-                                <form action="">
-                                    <div class="panel panel-default">
-                                        <ins>Name: </ins>
-                                        <div class="panel-body" type="text" name="playerName" id="playerName" ng-bind="player.name" placeholder="name"></div>
-                                    </div>
-
-                                    <div class="">
-                                        <ins>Bet: </ins>
-                                        <div class="" type="text" name="playerBet" id="playerBet" ng-bind="player.betChoice" placeholder=""></div>
-                                    </div>
-                                    <div class="">
-                                        <ins>Oracle current rate: </ins>
-                                        <div class="" type="text" name="oracleCurrentRate" id="oracleCurrentRate" ng-bind="player.oracleCurrentRate" placeholder=""></div>
-                                    </div>
-                                    <div class="">
-                                        <ins>Played amount: </ins>
-                                        <div class="" type="text" name="playerAmount" id="playerAmount" ng-bind="player.betAmount" placeholder="amount in ether"></div>
-                                    </div>
-
-                                    <div class="">
-                                        <ins>Address: </ins>
-                                        <div class="" type="text" name="playerAddress" id="playerAddress" ng-bind="player.address" placeholder=""></div>
-                                    </div>
-                                    <div class="">
-                                        <ins>Balance: </ins>
-                                        <div class="" type="text" name="playerBalance" id="playerBalance" ng-bind="player.balance" placeholder=""></div>
-                                    </div>
-                                </form>
+                                      <ins>Name: </ins>
+                                      <div class="" type="text" name="player_name" id="player_name" ng-bind="player.name" placeholder="name"></div>
+                                      <ins>Bet: </ins>
+                                      <div class="" type="text" name="player_bet" id="player_bet" ng-bind="player.betChoice" placeholder=""></div>
+                                      <ins>Oracle current rate: </ins>
+                                      <div class="" type="text" name="oracle_current_rate" id="oracle_current_rate" ng-bind="player.oracleCurrentRate" placeholder=""></div>
+                                      <ins>Played amount: </ins>
+                                      <div class="" type="text" name="player_amount" id="player_amount" ng-bind="player.betAmount" placeholder="amount in ether"></div>
+                                      <ins>Address: </ins>
+                                      <div class="" type="text" name="player_address" id="player_address" ng-bind="player.address" placeholder=""></div>
+                                      <ins>Balance: </ins>
+                                      <div class="" type="text" name="player_balance" id="player_balance" ng-bind="player.balance" placeholder=""></div>
                             </fieldset>
                         </div>
                     </div>
