--- a/ui/game.html
+++ b/ui/game.html
@@ -11,8 +11,12 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body class="container" ng-controller="gameUiController as gameUi">
-        <div class="" ng-if="gameUi.master">
-            <button type="button" name="button" class="btn btn-cancel" ng-click="gameUi.closeMatch()">Close game</button>
+        <div class="row">
+            <div class="col-sm-4" ng-if="gameUi.master">
+                <button type="button" name="button" class="btn btn-danger" ng-click="gameUi.closeMatch()">Close game</button>
+                <button type="button" name="button" class="btn btn-success" ng-click="gameUi.reset()">Reset</button>
+            </div>
+            <p class="col-sm-4 label bg-primary text-white text-center">Current rate:<span class="text-center" type="text" name="currentRate" id="currentRate" ng-bind="gameUi.currentRate"></span> €</p>
         </div>
         <div id="toast-connect" role="alert" aria-live="assertive" aria-atomic="true" class="toast" data-autohide="false" class="toast" style="position: absolute; top: 20px; right: 20px;">
             <div class="toast-header">
@@ -63,10 +67,10 @@
                                     </div>
 
                                     <div class="form-group">
-                                            <label>Choose if the EUR/USD price will go up or down</label>
+                                        <label>Choose if the EUR/USD price will go up or down</label>
                                         <select class="form-control" type="text" name="playerBet" id="playerBet" ng-model="gameUi.playerBet" placeholder="It will drop or rise?">
-                                            <option id="1">It will go up</option>
-                                            <option id="2">It will go down</option>
+                                            <option id="1" value="1"  selected="selected">It will go up</option>
+                                            <option id="2" value="0">It will go down</option>
                                         </select>
                                     </div>
 
@@ -83,14 +87,17 @@
                     </div>
                 </div>
                 <div class="pull-left" ng-repeat="player in gameUi.players">
-                    <div id="host-card" class="card margin-auto" style="width: 18rem;">
+                    <div id="host-card" class="card margin-auto" ng-class="{'text-success': player.winner, 'text-danger': player.loser}" style="width: 18rem;">
                         <img src="./img/player.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <fieldset ng-disabled="true">
                                       <ins>Name: </ins>
-                                      <div class="" type="text" name="player_name" id="player_name" ng-bind="player.name" placeholder="name"></div>
+                                      <div class="" type="text" name="player_name" id="player_name" ng-bind="player.name"></div>
                                       <ins>Bet: </ins>
-                                      <div class="" type="text" name="player_bet" id="player_bet" ng-bind="player.betChoice" placeholder=""></div>
+                                      <div class="" type="text" name="player_bet" id="player_bet">
+                                          <span ng-if="player.betChoice">It goes up</span>
+                                          <span ng-if="!player.betChoice">It goes down</span>
+                                      </div>
                                       <ins>Oracle current rate: </ins>
                                       <div class="" type="text" name="oracle_current_rate" id="oracle_current_rate" ng-bind="player.oracleCurrentRate" placeholder=""></div>
                                       <ins>Played amount: </ins>
